<resources>
  <string name="app_name">トロッコリオ帳</string>
  <string name="item">買ったもの</string>
  <string name="amount">金額</string>
  <string name="save_button">書いちゃうぞい！</string>
  <string name="nav_item_save">記帳するっぴ</string>
  <string name="pending">pending</string>
  <string name="mail_address">torokkorio@pinkikki.jp</string>
  <string name="home">home</string>
  <string name="nav_item_home">ホームだっぽい</string>
  <string name="logo">logo</string>
  <string name="nav_item_list">みるっぴ</string>
  <string name="sum_item_amount_prefix">合計：</string>
  <string name="en">￥</string>
  <string name="purchase_date">買った日</string>
</resources>
