<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:id="@+id/name_text"
      app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/amount_text"
      android:layout_marginTop="72dp" android:layout_marginBottom="21dp"
      app:layout_constraintBottom_toTopOf="@+id/amount_text" android:autofillHints="" android:hint="@string/item"
      android:inputType="text" app:layout_constraintVertical_chainStyle="spread_inside"/>
  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:ems="10"
      android:id="@+id/amount_text"
      android:layout_marginBottom="332dp"
      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginEnd="84dp" android:importantForAutofill="no" android:hint="@string/amount"/>
  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="date"
      android:ems="10"
      android:id="@+id/purchase_date_text"
      android:layout_marginBottom="228dp"
      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginEnd="84dp" android:importantForAutofill="no" android:hint="@string/purchase_date"
  />
  <Button
      android:text="@string/save_button"
      android:layout_width="132dp"
      android:layout_height="wrap_content"
      android:id="@+id/purchase_button" android:background="@color/colorPrimary"
      android:textColor="@android:color/white" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="136dp" app:layout_constraintTop_toBottomOf="@+id/amount_text"
      app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

